feat: add new @remirror/extension-react-tables package

--- a/examples/storybook-react/src/tsconfig.json
+++ b/examples/storybook-react/src/tsconfig.json
@@ -18,6 +18,9 @@
       "path": "../../../packages/remirror__core-helpers/src"
     },
     {
+      "path": "../../../packages/remirror__dev/src"
+    },
+    {
       "path": "../../../packages/remirror__extension-codemirror5/src"
     },
     {
@@ -25,6 +28,9 @@
     },
     {
       "path": "../../../packages/remirror__extension-react-component/src"
+    },
+    {
+      "path": "../../../packages/remirror__extension-react-tables/src"
     },
     {
       "path": "../../../packages/remirror__extension-tables/src"
