--- a/examples/storybook-react/__e2e__/tsconfig.json
+++ b/examples/storybook-react/__e2e__/tsconfig.json
@@ -34,6 +34,9 @@
       "path": "../../../packages/remirror__core-helpers/src"
     },
     {
+      "path": "../../../packages/remirror__dev/src"
+    },
+    {
       "path": "../../../packages/remirror__extension-codemirror5/src"
     },
     {
@@ -41,6 +44,9 @@
     },
     {
       "path": "../../../packages/remirror__extension-react-component/src"
+    },
+    {
+      "path": "../../../packages/remirror__extension-react-tables/src"
     },
     {
       "path": "../../../packages/remirror__extension-tables/src"
