--- a/examples/storybook-react/package.json
+++ b/examples/storybook-react/package.json
@@ -15,9 +15,11 @@
     "@emotion/css": "^11.1.3",
     "@linaria/core": "^3.0.0-beta.1",
     "@remirror/core-helpers": "1.0.0-next.60",
+    "@remirror/dev": "1.0.0-next.60",
     "@remirror/extension-codemirror5": "1.0.0-next.60",
     "@remirror/extension-heading": "1.0.0-next.60",
     "@remirror/extension-react-component": "1.0.0-next.60",
+    "@remirror/extension-react-tables": "1.0.0-next.60",
     "@remirror/extension-tables": "1.0.0-next.60",
     "@remirror/extension-text-color": "0.0.0",
     "@remirror/messages": "0.0.0",
